@@ -1,3 +1,7 @@
+2009-01-31  Karl Berry  <karl@gnu.org>
+
+	* autogen.sh: No need for --enable-maintainer-mode any more.
+
 2009-01-23  Sergey Poznyakoff  <gray@gnu.org.ua>
 
 	Fix behavior of info on invalid regular expressions.
